@@ -170,6 +170,18 @@ task spark() {
     }
 }
 
+task asiainfo-spark() {
+    doLast() {
+        project.exec {
+            workingDir 'asiainfo-spark'
+            commandLine "sh make-distribution.sh --tgz --skip-java-test  -Pyarn -Phive -Phadoop-2.3 -Dhadoop.version=$hadoop_common_version -Dyarn.version=$hadoop_common_version -DskipTests ".split().toList()
+            environment MAVEN_OPTS: "-Xmx4g -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=512m"
+            environment SCALA_HOME: "/home/jenkins/app/scala-2.10.3"
+        }
+        ant.move(file: "asiainfo-spark/spark-${apache_spark_version}-bin-${hadoop_common_version}.tgz", tofile: "build/ochadoop/spark-${apache_spark_version}-${hadoop_common_version}.tar.gz")
+    }
+}
+
 task all(dependsOn: [zookeeper, hadoop_common, hbase, hive]) {
     doLast {
         ant.mkdir(dir: "build/tar/ochadoop-${oc_version}")
